# FishClassifier

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.json  setup.py
GUI/Qss/scss/: _variables.scss
GUI/generated-files/css/: main.css
GUI/json-styles/: style.json
app/config/: logger_config_log.json  logger_configuration.py
app/controllers/login/: __init__.py  login_window_controller.py
app/controllers/main/: __init__.py  chat.py  main_window_controller.py
app/core/: __init__.py
app/core/abstract/: __init__.py  base_controller.py  progress_decorator.py
app/core/base/: __init__.py  window_manager.py
app/core/base/decorators/: __init__.py  menu_progress.py
app/core/base/factory/: __init__.py  controller_factory.py  view_factory.py
app/core/enums/: __init__.py  button_colors.py  icon_colors.py
app/core/interfaces/: __init__.py  progress.py  window_strategy.py
app/core/utils/: __init__.py
app/core/utils/button_helpers/: __init__.py  button_parameters.py
app/core/utils/effects/: __init__.py  (+1 more)
app/core/widgets/: __init__.py
app/models/: __init__.py  neural_network_model.py
app/modules/app_functions/: functions.py
app/modules/app_settings/: settings.py
app/modules/ui_functions/: functions.py
app/resources/: users.json
app/resources/qrc/: resources.qrc
app/views/: __init__.py
app/views/chat/: __init__.py  main_window.py
app/views/login/: __init__.py  login_window.py
neuron_interaction/: custom_model.py  custom_model_better.py  mobileNetV2_model.py  vgg16_model.py
notebooks/egor_grishkov/: mmm.ipynb
(+27 files in other folders)
