[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "fishclassifier"

version = "05.05.2024"

requires-python = ">=3.12.0"

description = """
An application for working with neural networks
"""

readme = "README.md"

license = {file = "LICENSE"}

keywords=["PySide6", "application", "app", "neural networks"]

authors = [
    {name = "Danil Kovalev"},
    {name = "Egor Grishkov"}
]

maintainers = [
    {name = "Danil Kovalev"},
    {name = "Egor Grishkov"}
]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Osint Tools",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]